[package]
name = "frame-header"
version = "0.2.0"
edition = "2021"
description = "Efficient header for audio packets"
license = "MIT"
repository = "https://github.com/wavey-ai/frame-header"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]
